; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_kmsg.c_ipc_get_current_thread_priority.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_kmsg.c_ipc_get_current_thread_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @ipc_get_current_thread_priority to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipc_get_current_thread_priority() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = call %struct.TYPE_4__* (...) @current_thread()
  store %struct.TYPE_4__* %4, %struct.TYPE_4__** %1, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %6 = call i64 @thread_get_requested_qos(%struct.TYPE_4__* %5, i32* %3)
  store i64 %6, i64* %2, align 8
  %7 = load i64, i64* %2, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %14, label %9

9:                                                ; preds = %0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @thread_user_promotion_qos_for_pri(i32 %12)
  store i64 %13, i64* %2, align 8
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %9, %0
  %15 = load i64, i64* %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @_pthread_priority_make_from_thread_qos(i64 %15, i32 %16, i32 0)
  ret i32 %17
}

declare dso_local %struct.TYPE_4__* @current_thread(...) #1

declare dso_local i64 @thread_get_requested_qos(%struct.TYPE_4__*, i32*) #1

declare dso_local i64 @thread_user_promotion_qos_for_pri(i32) #1

declare dso_local i32 @_pthread_priority_make_from_thread_qos(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
